[gd_scene load_steps=2 format=3 uid="uid://hud"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_script"]

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_script")

[node name="TopBar" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 12.0
offset_bottom = 44.0
grow_horizontal = 2
alignment = 1

[node name="NodeCountLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
text = "The Math Universe"
horizontal_alignment = 1

[node name="HoverLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = ""
horizontal_alignment = 1

[node name="ControlsLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -30.0
offset_right = 500.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.4, 0.4, 0.5, 0.7)
text = "Controls hint"
horizontal_alignment = 1
